# MeetingsScheduler

./: README.md
MeetingsSchecduler/: db.sqlite3  manage.py  pyproject.toml
MeetingsSchecduler/MeetingsSchecduler/: asgi.py  settings.py  urls.py  wsgi.py
MeetingsSchecduler/schedulerapp/: admin.py  forms.py  models.py  urls.py  views.py
MeetingsSchecduler/schedulerapp/migrations/: 0001_initial.py
MeetingsSchecduler/schedulerapp/templates/schedulerapp/: appointment_form.html  appointment_list_manager.html  appointment_list_secretary.html  base.html  index_manager.html  index_secretary.html
MeetingsSchecduler/schedulerapp/templates/static/schedulerapp/: dialog.js  socket.js
MeetingsSchecduler/schedulerapp/templates/static/users/: main.css
MeetingsSchecduler/schedulerapp/templates/templatetags/: custom_tags.py
MeetingsSchecduler/schedulerapp/templates/users/: login.html  logout.html  profile.html
