[tool.poetry]
name = "mypackage"
version = "0.1.0"
description = ""
authors = ["ahmedS <ahmed299777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.4.0"
django = "^4.1.7"
django-crispy-forms = "^2.0"
black = "^23.1.0"
django-widget-tweaks = "^1.4.12"
channels = "^4.0.0"
whitenoise = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
